--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>KIMJINSEOK_PORTFOLIO</title>
+    <link rel="shortcut icon" type="text/css" href="favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="portfolio_mainpage_script.js"></script>
     <link rel="stylesheet" href="portfolio_mainpage_style.css">
